Update README.md + bunch of other files
Reflect the rename of the repo

--- a/oside-derive/Cargo.toml
+++ b/oside-derive/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "scarust-derive"
+name = "oside-derive"
 version = "0.1.0"
 authors = ["Andrew Yourtchenko <ayourtch@gmail.com>"]
 edition = "2018"
