--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ itertools = "*"
 rand = "*"
 linkme = "0.3"
 lazy_static = "*"
-generic-array = { version = "*", features = ["serde"] }
+generic-array = { version = "^1.1.*", features = ["serde"] }
 typenum = "*"
 doc-comment = "*"
 serde = { version = "1.0", features = ["derive"] }
