--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ oside-derive = { path = "oside-derive" }
 mopa = "*"
 mac_address = "*"
 itertools = "*"
-rand = "*"
+rand = "^0.8.5"
 linkme = "0.3"
 lazy_static = "*"
 generic-array = { version = "^1.1.*", features = ["serde"] }
