cargo update with crypto crates
Change-Id: I15a69dcd7bdc5b81c0158824d72fee2c70e85906

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,13 @@ doc-comment = "*"
 serde = { version = "1.0", features = ["derive"] }
 typetag = "*"
 
+md-5 = "*"
+sha1 = "*"
+hmac = "*"
+aes = "*"
+des = "*"
+cbc = "*"
+
 [dev-dependencies]
 criterion = "0.3"
 pcap-parser = "0.14.*"
