--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,12 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[profile.release]
+debug = true # debug symbols cost nothing
+# super slow # lto = true # do whole program optimization
+opt-level = "s" # try to generate small code
+overflow-checks = true # !!!
+
 [dependencies]
 oside-derive = { path = "oside-derive" }
 mopa = "*"
