wg: implement Curve25519
Change-Id: I0695ae6f3e77bd4396d6e495a9a74a638e37d5df

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,8 @@ cbc = "*"
 cipher = "*"
 cfb-mode = "*"
 blake2 = "*"
+x25519-dalek = { version = "2", features = ["static_secrets"] }
+curve25519-dalek = "4"
 log = "*"
 env_logger = "*"
 
