--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ cfb-mode = "*"
 blake2 = "*"
 x25519-dalek = { version = "2", features = ["static_secrets"] }
 curve25519-dalek = "4"
+chacha20poly1305 = "0.10"
 log = "*"
 env_logger = "*"
 
